# chatgpt-app

./: .eslintignore  .eslintrc.json  .gitignore  README.md  electron-builder.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  windi.config.ts
.github/workflows/: build.yml  publish.yml
electron/: electron-env.d.ts
electron/main/: appConfig.ts  bootstrap.ts  chatgpt.ts  constants.ts  darkMode.ts  index.ts  markdown.ts  preset.ts
electron/main/database/: create.ts  db.ts  index.ts  setup.ts
electron/preload/: electron.ts  index.ts  loading.ts
locales/: en-US.yaml  jp.yaml  zh-CN.yaml  zh-TW.yaml
src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  typing.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  config.rs  main.rs  utils.rs
src/api/chatgpt/: buildRequest.ts  index.ts  sendMessage.ts  sendMessageStream.ts  types.ts
src/common/: actTo.ts  constants.ts  electron.ts
src/components/: ChatAvatar.vue  ChatMessage.vue  ChatMessageControl.vue  ChatMessageList.vue  ChatSidebar.vue  ChatSidebarItem.vue  ChatTextArea.vue  Layout.vue  Navbar.vue  SettingForm.vue
src/components/icons/: ActorIcon.vue  AddIcon.vue  ArrowBackIcon.vue  ArrowBottomIcon.vue  ArrowLeftIcon.vue  ArrowRightIcon.vue  CheckedIcon.vue  CloseIcon.vue  CoderIcon.vue  CopyIcon.vue  DarkIcon.vue  DeleteIcon.vue  EditIcon.vue  InfoIcon.vue  LightIcon.vue  MemoryIcon.vue  MessageIcon.vue  ModeIcon.vue  MoreIcon.vue  OpenAIIcon.vue  RetryIcon.vue  SendIcon.vue  SettingIcon.vue  UserIcon.vue  localesIcon.vue
src/composables/: appConfig.ts  chatApi.ts  chatMessage.ts  chatRecord.ts  coder.ts  colorTheme.ts  copyCode.ts  darkMode.ts  db.ts  locale.ts  markdown.ts  monaco.ts  prompt.ts  scroll.ts  sendMessage.ts  translate.ts
src/modules/: i18n.ts  index.ts  naive-ui.ts
src/pages/: Chat.vue  Coder.vue  Home.vue  Setting.vue  Translate.vue
src/router/: index.ts  routes.ts
src/store/: index.ts  store.ts
src/store/modules/: chatMessage.ts  chatRecord.ts  index.ts
src/styles/: index.css  markdown.css
src/utils/: generateId.ts  index.ts  is.ts  tokenizer.ts  wordCounter.ts
typing/: typing.d.ts
